@@ -1,3 +1,11 @@
+2020-04-28  Patrick Palka  <ppalka@redhat.com>
+
+	LWG 3433 subrange::advance(n) has UB when n < 0
+	* include/std/ranges (subrange::prev): Fix typo.
+	(subrange::advance): Handle a negative argument as per the proposed
+	resolution of LWG 3433.
+	* testsuite/std/ranges/subrange/lwg3433.cc: New test.
+
 2020-04-28  Jonathan Wakely  <jwakely@redhat.com>
 	    Iain Sandoe  <iain@sandoe.co.uk>
 
